# grafana

./: .env.template  Makefile  README.md  docker-compose.influxdb.yml  docker-compose.prometheus.yml  load_env.sh  make.sh  pyproject.toml
docker/grafana/provisioning/dashboards/: 222-1711201714834.json  dashboards.yml
docker/grafana/provisioning/datasources/: InfluxDB_v2_Flux.yml  prometheus.yml
docker/prometheus/: prometheus.yml
docker/telegraf/: telegraf.conf
scripts/: colors.sh  helpers.sh
