[tool.poetry]
name = "grafana-prometheus"
version = "0.1.0"
description = ""
authors = ["Denis <xczdenis@gmail.com>"]
readme = "README.md"
packages = [
    { include = "prometheus", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
